internal/suites/example/kube/mail/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailcatcher-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: mail-tls
      hosts:
        - mail.example.com
  rules:
    - host: mail.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mailcatcher-service
              servicePort: 1080
...
